--- a/7similar_patents_less_than_date/.gitignore
+++ b/7similar_patents_less_than_date/.gitignore
@@ -1,6 +1,6 @@
 3keys_for_logicmill.csv
-4similar_patents_byLogicMill.csv
 7similar_patents_less_than_date.csv
+data_final.csv
 patents_not_found.csv
 patents_without_embeddings.csv
 patents_without_publicationdate.csv
