--- a/data_output/.gitignore
+++ b/data_output/.gitignore
@@ -5,3 +5,4 @@ patents_not_found.csv
 patents_without_embeddings.csv
 patents_without_publicationdate.csv
 8similar_patents_with_techclasses.csv
+9similar_patents_less_than1000.csv
