--- a/data_output/.gitignore
+++ b/data_output/.gitignore
@@ -6,3 +6,7 @@ patents_without_embeddings.csv
 patents_without_publicationdate.csv
 8similar_patents_with_techclasses.csv
 9similar_patents_less_than1000.csv
+dataconcat1.csv
+dataconcat2.csv
+data204.csv
+10merged_data.csv
