--- a/data_output/.gitignore
+++ b/data_output/.gitignore
@@ -15,3 +15,5 @@ data_with_citations.csv
 12english_abstract_title.csv
 patents_not_en_abstract.csv
 applnids_notin_tls203_appln_abstr.csv
+13handling_non_english.csv
+patents_not_en.csv
